5.0.27

NEW
    - Added Reward Tooltip to WorldQuests
    - Added threat text on target
    - Added FPS to Minimap
    - Added durability icon to character stats
    - Added scrollbar to titles
    - Added raid info to Hero window -> curreny tab

FIXES
    - Fixed bag close button not working at bank, vendor or mailbox
    - Multiple tweaks to issues in target, unit, and focus frame behaviors
    - Improve HUD performance in certain cases with event filtering
    - Fixed achievement criteria not tracked correctly

MISCELLANEOUS
    - Paladin beacons use the same indicator slot, and colors now match their spell icon colors
    - Added indicator for "Glimmer of Light"


5.0.26

NEW
    - Track reputation while under max level
    - Added new zones' reputation images

FIXES
    - Resolve texture masking issue on health globe spark

MISCELLANEOUS
    - Changed Click and Shift-Click for local und server time


5.0.25

FIXES
    - Fix errors in bag and bank resizing
    - Play nicely with WarfrontRareTracker addon


5.0.24

FIXES
    - Fixed Lua error when open Bags/Banks after moving
    - Heart of Azeroth can now be opend from the hero window


5.0.23

Update for Patch 8.2.0


5.0.22

NEW
    - Added ignoring auras by shift+right clicking on them
    - Added option to hide raid aura tooltips (and disable ignoring by shift+right clicking) while in combat
    - Added a tooltip showing money of characters on the same faction+realm to the bag money text
    - Added ability to set specs to equipment sets (click on edit button)
    - Added Questtracking by click on the questname

FIXES
    - Fixed bank and reagent bank sorting giving error message or not working at all
    - Fixed error message when right-clicking bag icons (CurseForge#276)


5.0.21

FIXES
    - Fix lua error in arena


5.0.20

NEW
    - Added warfront ressources


5.0.19

FIXES
    - In-depth fix for the ItemButton API change

5.0.18

FIXES