@@ -1087,6 +1087,141 @@
             </Layer>
         </Layers>
     </Frame>
+    <Frame name="GwMiniMapInstanceDifficulty" hidden="true" frameStrata="LOW" frameLevel="2" virtual="true">
+        <Size>
+            <AbsDimension x="38" y="46"/>
+        </Size>			
+        <Anchors>
+            <Anchor point="TOPLEFT">
+                <Offset>
+                    <AbsDimension x="22" y="-17"/>
+                </Offset>
+            </Anchor>
+        </Anchors>
+        <Layers>
+            <Layer level="ARTWORK">
+                <Texture name="$parentTexture" file="Interface\Minimap\UI-DungeonDifficulty-Button">
+                    <Size>
+                        <AbsDimension x="64" y="46"/>
+                    </Size>							
+                    <Anchors>
+                        <Anchor point="CENTER">
+                            <Offset>
+                                <AbsDimension x="0" y="0"/>
+                            </Offset>
+                        </Anchor>
+                    </Anchors>							
+                    <TexCoords left="0.0" right="0.25" top="0.0703125" bottom="0.4140625"/>
+                </Texture>
+                <FontString name="$parentText" inherits="GameFontNormalSmall" justifyH="CENTER">
+                    <Anchors>
+                        <Anchor point="CENTER">
+                            <Offset>
+                                <AbsDimension x="-1" y="-7"/>
+                            </Offset>
+                        </Anchor>
+                    </Anchors>						
+                </FontString>
+            </Layer>
+        </Layers>
+    </Frame>
+    <Frame name="GwGuildInstanceDifficulty" hidden="true" enableMouse="true" frameStrata="LOW" frameLevel="2" virtual="true">
+        <Size>
+            <AbsDimension x="38" y="46"/>
+        </Size>
+        <Anchors>
+            <Anchor point="TOPLEFT">
+                <Offset>
+                    <AbsDimension x="22" y="-17"/>
+                </Offset>
+            </Anchor>
+        </Anchors>
+        <Layers>
+            <Layer level="BACKGROUND">
+                <Texture name="$parentBackground" file="Interface\GuildFrame\GuildDifficulty" parentKey="background">
+                    <Anchors>
+                        <Anchor point="TOPLEFT"/>
+                    </Anchors>
+                    <Size x="41" y="53"/>
+                    <TexCoords left="0.00781250" right="0.32812500" top="0.01562500" bottom="0.84375000"/>
+                </Texture>
+            </Layer>
+            <Layer level="BORDER">
+                <Texture name="$parentDarkBackground" file="Interface\GuildFrame\GuildDifficulty" alpha="0.7">
+                    <Anchors>
+                        <Anchor point="BOTTOM" relativeTo="$parentBackground" x="0" y="7"/>
+                    </Anchors>
+                    <Size x="30" y="21"/>
+                    <TexCoords left="0.67968750" right="0.91406250" top="0.01562500" bottom="0.34375000"/>
+                </Texture>
+            </Layer>
+            <Layer level="ARTWORK">
+                <Texture name="$parentEmblem" parentKey="emblem" file="Interface\GuildFrame\GuildEmblems_01">
+                    <Size x="16" y="16"/>
+                    <Anchors>
+                        <Anchor point="TOPLEFT" x="12" y="-10"/>
+                    </Anchors>
+                </Texture>
+                <Texture name="$parentBorder" file="Interface\GuildFrame\GuildDifficulty" parentKey="border">
+                    <Anchors>
+                        <Anchor point="TOPLEFT"/>
+                    </Anchors>
+                    <Size x="41" y="53"/>
+                    <TexCoords left="0.34375000" right="0.66406250" top="0.01562500" bottom="0.84375000"/>
+                </Texture>
+                <Texture name="$parentHeroicTexture" file="Interface\GuildFrame\GuildDifficulty">
+                    <Anchors>
+                        <Anchor point="BOTTOMLEFT" x="8" y="7"/>
+                    </Anchors>
+                    <Size x="12" y="13"/>
+                    <TexCoords left="0.67968750" right="0.77343750" top="0.65625000" bottom="0.85937500"/>
+                </Texture>
+                <Texture name="$parentMythicTexture" file="Interface\GuildFrame\GuildDifficulty">
+                    <Anchors>
+                        <Anchor point="BOTTOMLEFT" x="8" y="7"/>
+                    </Anchors>
+                    <Size x="12" y="13"/>
+                    <TexCoords left="0.77343750" right="0.8671875" top="0.65625000" bottom="0.85937500"/>
+                </Texture>
+                <Texture name="$parentChallengeModeTexture" file="Interface\Common\mini-hourglass">
+                    <Anchors>
+                        <Anchor point="BOTTOMLEFT" x="8" y="7"/>
+                    </Anchors>
+                    <Size x="12" y="12"/>
+                </Texture>
+                <FontString name="$parentText" inherits="GameFontNormalSmall" text="25">
+                    <Anchors>
+                        <Anchor point="BOTTOMLEFT" x="20" y="8"/>
+                    </Anchors>
+                </FontString>
+            </Layer>
+            <Layer level="OVERLAY">
+                <Texture name="$parentHanger" file="Interface\GuildFrame\GuildDifficulty">
+                    <Size x="39" y="16"/>
+                    <Anchors>
+                        <Anchor point="TOPLEFT" x="1" y="-2"/>
+                    </Anchors>
+                    <TexCoords left="0.67968750" right="0.98437500" top="0.37500000" bottom="0.62500000"/>
+                </Texture>
+            </Layer>
+        </Layers>
+    </Frame>
+    <Frame name="GwMiniMapChallengeMode" hidden="true" enableMouse="true" frameStrata="LOW" frameLevel="2" virtual="true">
+		<Size x="27" y="36"/>
+		<Anchors>
+			<Anchor point="TOPLEFT" x="28" y="-23"/>
+		</Anchors>
+        <Layers>
+            <Layer level="BACKGROUND">
+                <Texture file="Interface\Challenges\challenges-minimap-banner">
+                    <Size x="64" y="64"/>
+                    <Anchors>
+                        <Anchor point="CENTER"/>
+                    </Anchors>
+                </Texture>
+            </Layer>
+		</Layers>
+	</Frame>
     <Button name="GwMapTime" frameStrata="LOW" registerForClicks="LeftButtonUp,RightButtonUp" enableMouse="true" frameLevel="2" virtual="true">
         <Size x="50" y="20"></Size>
         <Anchors>
